--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".KyselyActivity"
+            android:label="@string/title_activity_kysely"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".RaportitActivity"
+            android:label="@string/title_activity_raportit"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
